# programming_pearls

./: .gitignore  README.md
chapter1/: CMakeLists.txt  build.sh  index.md
chapter1/src/: 1_1.cpp  1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp  BitSet.cpp  BitSet.h  random_test.cpp
chapter2/: CMakeLists.txt  clean.sh  index.md
chapter2/src/: 2_3.cpp  gcd.cpp
misc/: clean.sh
